--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Cerita Kita — Auto Story (Fixed)</title>
+    <title>Cerita Kita — Auto Story</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <style>
          :root {
@@ -44,7 +44,8 @@
             flex-direction: column;
             padding: 20px;
             text-align: center;
-            position: relative
+            position: relative;
+            padding-top: 0px;
         }
         
         .slide-frame {
@@ -204,8 +205,10 @@
                         <div class="photo-card"><img src="foto.jpg" alt="Tyo"></div>
                     </div>
                     <div class="hearts"><span class="heart">💞</span><span class="heart">✨</span><span class="heart">💖</span></div>
-                    <div class="headline">Di satu waktu kamu deketin aku saat aku sedang gundah</div>
-                    <div class="sub">Aku yang lagi butuh ditemani, dan kamu datang dengan segala perhatianmu.</div>
+                    <div class="headline">Di satu waktu kamu deketin aku
+                        <br> saat aku sedang gundah</div>
+                    <div class="sub">Aku yang lagi butuh ditemani,
+                        <br>dan kamu datang dengan segala perhatianmu.</div>
                 </div>
             </section>
 
