--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Cerita Kita — Auto Story</title>
+    <title>Cerita Kita — Auto Story (Fixed)</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <style>
          :root {
@@ -46,6 +46,7 @@
             text-align: center;
             position: relative;
             padding-top: 0px;
+            margin-top: 0px;
         }
         
         .slide-frame {
@@ -200,7 +201,6 @@
             <!-- Photo pair (left-right) -->
             <section class="swiper-slide">
                 <div class="slide-frame">
-                    <div class="hearts"><span class="heart">💞</span><span class="heart">✨</span><span class="heart">💖</span></div>
                     <div class="headline">Di satu waktu kamu deketin aku
                         <br> saat aku sedang gundah</div>
                     <div class="sub">Aku yang lagi butuh ditemani,
@@ -481,4 +481,3 @@
 </body>
 
 </html>
-
