--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@
         .swiper-slide {
             display: flex;
             align-items: center;
-            justify-content: center;
+            /* justify-content: center; */
             flex-direction: column;
             padding: 20px;
+            padding-top: 60px;
             text-align: center;
             position: relative;
-            padding-top: 0px;
-            margin-top: 0px;
         }
         
         .slide-frame {
